--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="about show-animate" id="about">
         <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
         <div class="about-img">
-            <img src="E:/HTML/Manshi Portfolio/img/a1.jpg" alt="">
+            <img src="img/a1.jpg" alt="">
             <span class="circle-span"></span>
             <span class="animate scroll" style="--i:2;"></span>
 
