--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="home-sci">
             <a href="https://www.linkedin.com/in/manshi-bhatiyani-6863a9229" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
             <a href="https://github.com/manshi-bhatiyani" target="_blank"><i class='bx bxl-github'></i></a>
-            <a href="/img/manshi.pdf" download><i class='bx bxs-download'></i></a>
+            <a href="img/manshi.pdf" download><i class='bx bxs-download'></i></a>
             <span class="animate" style="--i:6;"></span>
         </div>
         <div class="home-imghover"></div>
